--- a/_columns/Swing_Trading/zh-cn/2024-11-08.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-08.md
@@ -21,8 +21,8 @@ Specifically, we'll get leveraged counterparts like the **2X ProShares Ultra S&P
 
 
 
-Strong September for S&P 500标准普尔 500 指数 9 月表现强劲
------------------------------------------------
+Strong September for S&P 500
+----------------------------
 
 
 Our most recent closed trade for the S&P 500 started with a [big outside day and recovery](https://www.investors.com/market-trend/the-big-picture/stocks-market-dow-jones-nasdaq-sp500-inflation/) after a Consumer Price Index (CPI) report shook markets **(1)**. We started increasing exposure with some individual stocks and then went with the 2X leveraged SSO trade the next day **(2)**.  
