--- a/_columns/Swing_Trading/zh-cn/2024-11-15.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-15.md
@@ -26,7 +26,7 @@ Last week's column [discussed the unexpected signal of market strength](https://
 
 
 An attractive quality was the relative strength line hitting highs before the price on the software ETF. Plus, having cleared the long-term resistance around 90 from 2021, we were looking at few barriers to detract from the price. But we decided to wait until the election results came in to act. If the reaction was positive, we planned to ramp up exposure quickly. If it was choppy or down, we had enough of a cash position offering protection and the ability to reduce our holdings if necessary.  
-一个有吸引力的品质是相对强弱线在软件 ETF 的价格之前触及高点。此外，在清除了 90 年在 2021 附近的长期阻力位后，我们正在寻找一些障碍来降低价格。但我们决定等到选举结果出来后再采取行动。如果反应是积极的，我们计划迅速增加曝光。如果市场波动或下跌，我们有足够的现金头寸来提供保护，并在必要时减少我们的持有量。
+一个有吸引力的品质是相对强弱线在软件 ETF 的价格之前触及高点。此外，在清除了 90 年在 2021 附近的长期阻力位后，我们正在寻找一些障碍来降低价格。但我们决定等到选举结果出来后再采取行动。如果反应是积极的，我们计划迅速增加曝光。如果市场波动或下跌，我们有足够的现金头寸提供保护，并在必要时减少我们的持有量。
 
 
 With the election results decisive and a strong market reaction, we looked to ETFs to start ramping up exposure quickly. We started a three-fourths position in IGV on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) as it gapped up and then added another quarter a little later in the day **(2)**.  
@@ -60,7 +60,7 @@ After six consecutive days of gains, we decided to start scaling back on our pos
 
 
 But remember the goal isn't to sell at the top. The goal is to make as much money as you can and even more importantly keep it. Selling into strength helps a great deal with the keeping it part. But there's no free lunch. You have to be willing to sacrifice some gains in order to keep the profit you have.  
-但请记住，目标不是在顶部销售。目标是尽可能多地赚钱，更重要的是保留它。以实力出售对保持它部分有很大帮助。但是天下没有免费的午餐。你必须愿意牺牲一些收益，才能保持你所拥有的利润。
+但请记住，目标不是在顶部销售。目标是尽可能多地赚钱，更重要的是保留它。以实力推销对保持它部分有很大帮助。但是天下没有免费的午餐。你必须愿意牺牲一些收益才能保持你所拥有的利润。
 
 
 Ultimately, IGV closed poorly after gapping up and we took the opportunity to reduce another quarter position. When IGV fell more the next day **(5)**, we removed the remaining position. Our earlier sells were at higher prices and on the way up making the drawdown on IGV very slight.  
