--- a/_columns/The_Big_Picture/zh-cn/2024-11-19.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-19.md
@@ -24,12 +24,10 @@ At the close, the Nasdaq led the main indexes with a gain of 1% and the S&P 500 
 收盘时，纳斯达克指数以 1% 的涨幅领跑主要指数，标准普尔 500 指数上涨 0.4%。这两个指数再次保持在 21 天指数移动平均线。
 
 
-But the Dow fell 0.3%, despite that **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) climbed to a record high after the retailer [beat October-quarter estimates](https://www.investors.com/news/walmart-earnings-q3-walmart-stock-trump-win-inflation/?_gl=1*9ofnn3*_gcl_au*Mjg1ODY3MzE5LjE3MjcwNTY4MDM.*_ga*MTEzNDE0NDY2OC4xNzMyMDIyNTI1*_ga_K2H7B9JRSS*MTczMjA0NTU3OS41LjEuMTczMjA0NjI4NC41Ny4wLjA.). The Dow, however, trimmed losses and closed above its 21-day exponential moving average.  
-但道琼斯指数下跌 0.3%，尽管**沃尔玛** （[WMT](https://research.investors.com/quote.aspx?symbol=WMT)） 在[零售商 10 月季度超出预期](https://www.investors.com/news/walmart-earnings-q3-walmart-stock-trump-win-inflation/?_gl=1*9ofnn3*_gcl_au*Mjg1ODY3MzE5LjE3MjcwNTY4MDM.*_ga*MTEzNDE0NDY2OC4xNzMyMDIyNTI1*_ga_K2H7B9JRSS*MTczMjA0NTU3OS41LjEuMTczMjA0NjI4NC41Ny4wLjA.)后攀升至历史新高。然而，道琼斯指数收复失地并收于其 21 天指数移动平均线上方。
+But the Dow fell 0.3%, despite that **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) climbed to a record high after the retailer [beat October-quarter estimates](https://www.investors.com/news/walmart-earnings-q3-walmart-stock-trump-win-inflation/?_gl=1*9ofnn3*_gcl_au*Mjg1ODY3MzE5LjE3MjcwNTY4MDM.*_ga*MTEzNDE0NDY2OC4xNzMyMDIyNTI1*_ga_K2H7B9JRSS*MTczMjA0NTU3OS41LjEuMTczMjA0NjI4NC41Ny4wLjA.). The Dow, however, trimmed losses and closed above its 21-day exponential moving average.  
 
 
-Volume rose on the New York Stock Exchange and fell on the Nasdaq from Monday's totals.  
-纽约证券交易所的成交量较周一的总成交量上升，纳斯达克的成交量下跌。
+Volume rose on the New York Stock Exchange and fell on the Nasdaq from Monday's totals.  
 
 
 The 10-year Treasury yield fell nearly four basis points to 4.378% but that was well off morning lows. The benchmark yield is at a Nov. 8 low, which growth investors and rate-sensitive stocks would welcome. Real estate, utilities and technology sectors climbed 0.4% to 0.8% Tuesday. Consumer discretionary, consumer staples and communications services were other S&P 500 indexes that rose, and the other five fell.  
@@ -56,8 +54,7 @@ Smaller stocks stood their ground. The Russell 2000 reversed higher after testin
 较小的股票坚守阵地。罗素 2000 指数在测试 10 月中旬的高点 2,290 附近后反转走高。该指数逆转走高 0.8%。标准普尔中型股 400 指数 （[MDY](https://research.investors.com/quote.aspx?symbol=MDY)） 在 3,200 水平附近也出现了类似的看涨逆转，收盘上涨 0.1%。
 
 
-It will be important for both indexes to follow through on those reversals by adding gains this week.  
-这两个指数都必须通过本周增加涨幅来跟进这些逆转。
+It will be important for both indexes to follow through on those reversals by adding gains this week.  
 
 
 A few leading stocks that had erased gains from November breakouts, such as **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) and **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), rebounded back above their buy points, too.  
@@ -72,28 +69,23 @@ Advancing stocks topped decliners by 9-7 on the Nasdaq, but losers edged out win
 根据 FactSet 的数据，纳斯达克上涨的股票以 9-7 的比分领先于下跌的股票，但在纽约证券交易所，下跌的股票略微超过了赢家。
 
 
-Market breadth measures have been mixed.  
-市场广度指标喜忧参半。
+Market breadth measures have been mixed.  
 
 
-The number of [52-week highs](https://www.investors.com/data-tables/new-high-list-nov-18-2024/) and the number of stocks up in volume vs. down in volume are at bullish levels. But the NYSE and Nasdaq advance-declines lines are below their 10-day moving averages, and the Nasdaq's line remains in a gentle downtrend.  
-[52 周高点](https://www.investors.com/data-tables/new-high-list-nov-18-2024/)的数量以及成交量上涨与成交量下跌的股票数量均处于看涨水平。但纽约证券交易所和纳斯达克的涨跌线低于其 10 天移动平均线，纳斯达克的线仍处于温和的下降趋势中。
+The number of [52-week highs](https://www.investors.com/data-tables/new-high-list-nov-18-2024/) and the number of stocks up in volume vs. down in volume are at bullish levels. But the NYSE and Nasdaq advance-declines lines are below their 10-day moving averages, and the Nasdaq's line remains in a gentle downtrend.  
 
 
-Direxion Nasdaq 100 Equal Weight ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) found support at its 50-day line. It climbed 0.3%. Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) fell 0.3%.  
-Direxion 纳斯达克 100 等权重 ETF （[QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)） 在其 50 天线找到支撑。它上涨了 0.3%。Invesco S&P 500 Equal Weight ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 下跌 0.3%。
+Direxion Nasdaq 100 Equal Weight ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) found support at its 50-day line. It climbed 0.3%. Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) fell 0.3%.  
 
 
-Stock Market Faces Nvidia Earnings股市面临英伟达财报
--------------------------------------------
+Stock Market Faces Nvidia Earnings
+----------------------------------
 
 
-The stock market showed fortitude as it prepared for a major earnings report after Wednesday's close from **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)).  
-股市在周三收盘后为 **Nvidia** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 的重要收益报告做准备时表现出坚韧不拔。
+The stock market showed fortitude as it prepared for a major earnings report after Wednesday's close from **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)).  
 
 
-Along with the report comes the stock market's hopes for a continued artificial intelligence boom. Nvidia is arguably the most important AI enterprise, so the financial results and executive comments act as an important lever for the AI trade. And, oh by the way, Nvidia is also the biggest stock by market cap, now exceeding $3.601 trillion. Shares rose 4.5% Tuesday.  
-随着该报告的发布，股市对人工智能持续繁荣的希望也随之而来。Nvidia 可以说是最重要的 AI 企业，因此财务业绩和高管评论是 AI 交易的重要杠杆。而且，顺便说一句，英伟达也是市值最大的股票，现在超过 3.601 万亿美元。股价周二上涨 4.5%。
+Along with the report comes the stock market's hopes for a continued artificial intelligence boom. Nvidia is arguably the most important AI enterprise, so the financial results and executive comments act as an important lever for the AI trade. And, oh by the way, Nvidia is also the biggest stock by market cap, now exceeding $3.601 trillion. Shares rose 4.5% Tuesday.  
 
 
 In economic news, U.S. housing starts fell 3.1% in October to 1.3 million at an annualized rate, a larger drop than expected. Construction activity in the South dropped 8.8% — likely impacted by hurricanes, Priscilla Thiagamoorthy, senior economist at BMO Capital Markets, said in an analysis. Building permits, a proxy for future home construction, edged down 0.6% to a 1.42 million annual rate.  
