--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-19.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-19.md
@@ -23,7 +23,7 @@ author: SCOTT LEHTONEN
 
 
 Originally conceived as an efficiency tool to free up traders' time by automating low-touch tickets, [AiEX has evolved in new areas](https://www.investors.com/research/breakout-stocks-technical-analysis/fintech-firm-tradeweb-expands-ai-for-traders-alonside-nvidia-stock-lifting-tw-stock-toward-a-breakout/). It is now deployed by some of the world's most sophisticated traders. Tradeweb says the technology is creating entirely new avenues of trading across various asset classes and trading environments.  
-AiEX 最初被设想为一种效率工具，通过自动化低接触票证来释放交易者的时间，[AiEX 已经在新领域发展](https://www.investors.com/research/breakout-stocks-technical-analysis/fintech-firm-tradeweb-expands-ai-for-traders-alonside-nvidia-stock-lifting-tw-stock-toward-a-breakout/)。现在，世界上一些最老练的交易员都部署了它。Tradeweb 表示，该技术正在为各种资产类别和交易环境创造全新的交易途径。
+AiEX 最初被设想为一种效率工具，通过自动化低接触票证来释放交易者的时间，[后来在新领域发展](https://www.investors.com/research/breakout-stocks-technical-analysis/fintech-firm-tradeweb-expands-ai-for-traders-alonside-nvidia-stock-lifting-tw-stock-toward-a-breakout/)。现在，世界上一些最老练的交易员都部署了它。Tradeweb 表示，该技术正在为各种资产类别和交易环境创造全新的交易途径。
 
 
 Clients leverage Tradeweb's click-to-trade protocol within AiEX. That allows them to determine when, at what level and with whom to execute their trade. AiEX enables that while creating a minimal market footprint.  
@@ -35,7 +35,7 @@ The New York-based firm operates across three core areas: institutional (Tradewe
 
 
 In the latest quarter, reported on Oct. 30, Tradeweb earned 75 cents per share on revenue of $448.9 million. Earnings climbed 36% vs. the year-ago period, while sales grew 37%. Bullishly, the company boasts two quarters of accelerating earnings and sales growth. [Accelerating earnings and sales growth](https://www.investors.com/how-to-invest/investors-corner/accelerating-earnings-growth-often-precedes-a-break-out/) is a hallmark of big stock market winners.  
-在 10 月 30 日报告的最新季度中，Tradeweb 每股收益为 75 美分，营收为 4.489 亿美元。收益同比增长 36%，销售额增长 37%。乐观地说，该公司拥有两个季度的加速收益和销售额增长。[加速收益和销售额增长](https://www.investors.com/how-to-invest/investors-corner/accelerating-earnings-growth-often-precedes-a-break-out/)是股市大赢家的标志。
+在 10 月 30 日报告的最新季度中，Tradeweb 每股收益为 75 美分，营收为 4.489 亿美元。收益与去年同期相比增长 36%，而销售额增长 37%。乐观的是，该公司拥有两个季度的加速收益和销售额增长。[加速收益和销售额增长](https://www.investors.com/how-to-invest/investors-corner/accelerating-earnings-growth-often-precedes-a-break-out/)是股市大赢家的标志。
 
 
 For the full year, Wall Street forecasts the company's earnings will rise 28% before climbing another 14% in 2025, per [IBD MarketSurge](https://marketsurge.investors.com/).  
