--- a/_columns/Swing_Trading/zh-cn/2024-11-08.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-08.md
@@ -21,8 +21,8 @@ Specifically, we'll get leveraged counterparts like the **2X ProShares Ultra S&P
 
 
 
-Strong September for S&P 500
-----------------------------
+Strong September for S&P 500标准普尔 500 指数 9 月表现强劲
+-----------------------------------------------
 
 
 Our most recent closed trade for the S&P 500 started with a [big outside day and recovery](https://www.investors.com/market-trend/the-big-picture/stocks-market-dow-jones-nasdaq-sp500-inflation/) after a Consumer Price Index (CPI) report shook markets **(1)**. We started increasing exposure with some individual stocks and then went with the 2X leveraged SSO trade the next day **(2)**.  
@@ -48,7 +48,7 @@ Even though we started with a full position, we quickly added to make a double p
 
 
 When the S&P 500 broke its 10-day moving average line for the first time since our entry **(5)**, we peeled back our last purchase. Taking a portion off but keeping the bulk of the position kept our average cost low and our cushion.  
-当标准普尔 500 指数自我们进入 **（5）** 以来首次突破其 10 天移动平均线时，我们取消了最后一次购买。减少一部分但保留大部分头寸保持了我们的平均成本较低和缓冲。
+当标准普尔 500 指数自我们进入 **（5）** 以来首次突破其 10 天移动平均线时，我们取消了最后一次购买。减少一部分但保留大部分头寸，保持我们的平均成本较低和缓冲。
 
 
 After the S&P 500 recovered with support at its 21-day moving average line, we added that position right back **(6)**.  
