--- a/_columns/Swing_Trading/zh-cn/2024-11-15.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-15.md
@@ -26,7 +26,7 @@ Last week's column [discussed the unexpected signal of market strength](https://
 
 
 An attractive quality was the relative strength line hitting highs before the price on the software ETF. Plus, having cleared the long-term resistance around 90 from 2021, we were looking at few barriers to detract from the price. But we decided to wait until the election results came in to act. If the reaction was positive, we planned to ramp up exposure quickly. If it was choppy or down, we had enough of a cash position offering protection and the ability to reduce our holdings if necessary.  
-一个有吸引力的品质是相对强弱线在软件 ETF 的价格之前触及高点。此外，在清除了 90 年在 2021 附近的长期阻力位后，我们正在寻找一些障碍来降低价格。但我们决定等到选举结果出来后再采取行动。如果反应是积极的，我们计划迅速增加曝光。如果市场波动或下跌，我们有足够的现金头寸提供保护，并在必要时减少我们的持有量。
+一个有吸引力的品质是相对强弱线在软件 ETF 的价格之前触及高点。此外，在清除了 90 年在 2021 附近的长期阻力位后，我们正在寻找一些障碍来降低价格。但我们决定等到选举结果出来后再采取行动。如果反应是积极的，我们计划迅速增加曝光。如果市场波动或下跌，我们有足够的现金头寸来提供保护，并在必要时减少我们的持有量。
 
 
 With the election results decisive and a strong market reaction, we looked to ETFs to start ramping up exposure quickly. We started a three-fourths position in IGV on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) as it gapped up and then added another quarter a little later in the day **(2)**.  
