--- a/_columns/The_Big_Picture/zh-cn/2024-11-18.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-18.md
@@ -15,7 +15,7 @@ The stock market staged a rebound Monday after last week's setback, as most majo
 
 
 Dow Jones industrials lagged for most of the trading day and finished 0.1% lower, weighed by underperformance in **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)), **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)), Nvidia and **Sherwin-Williams** ([SHW](https://research.investors.com/quote.aspx?symbol=SHW)). Those three stocks accounted for about 85 points off the Dow. **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)) fell to its lowest close since Aug. 12.  
-道琼斯工业指数在交易日的大部分时间里都表现落后，收盘下跌 0.1%，受到**安进** （[AMGN）、](https://research.investors.com/quote.aspx?symbol=AMGN)**高盛** （[GS）、](https://research.investors.com/quote.aspx?symbol=GS)英伟达和**宣伟** （[SHW）](https://research.investors.com/quote.aspx?symbol=SHW) 表现不佳的拖累。这三只股票约占道琼斯指数 85 点。**耐克** （[NKE](https://research.investors.com/quote.aspx?symbol=NKE)） 跌至 8 月 12 日以来的最低收盘价。
+道琼斯工业指数在交易日的大部分时间里都表现落后，收盘下跌 0.1%，受到**安进** （[AMGN）、](https://research.investors.com/quote.aspx?symbol=AMGN)**高盛** （[GS）、](https://research.investors.com/quote.aspx?symbol=GS)英伟达和**宣伟** （[SHW](https://research.investors.com/quote.aspx?symbol=SHW)） 表现不佳的拖累。这三只股票约占道琼斯指数 85 点。**耐克** （[NKE](https://research.investors.com/quote.aspx?symbol=NKE)） 跌至 8 月 12 日以来的最低收盘价。
 
 
 
