--- a/_columns/The_Big_Picture/zh-cn/2024-11-20.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-20.md
@@ -16,14 +16,16 @@ It wasn't looking good in the early going Wednesday as sellers initially knocked
 
 
 
-Meanwhile, a weak earnings report from **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)) weighed on the S&P 500. But the index closed fractionally higher after falling nearly 1% intraday. Target slumped more than 20% after the retailer [missed on earnings and revenue](https://www.investors.com/news/target-earnings-walmart-tjx-q3-target-stock-tjx-stock/) and also gave a weak outlook.  
+Meanwhile, a weak earnings report from **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)) weighed on the S&P 500. But the index closed fractionally higher after falling nearly 1% intraday. Target slumped more than 20% after the retailer [missed on earnings and revenue](https://www.investors.com/news/target-earnings-walmart-tjx-q3-target-stock-tjx-stock/) and also gave a weak outlook.  
+与此同时，**Target** （[TGT](https://research.investors.com/quote.aspx?symbol=TGT)） 疲软的收益报告令标准普尔 500 指数承压。但该指数在盘中下跌近 1% 后收盘小幅走高。Target 在[未达到收益和收入](https://www.investors.com/news/target-earnings-walmart-tjx-q3-target-stock-tjx-stock/)预期并且前景疲软后下跌超过 20%。
 
 
-Target was already a laggard in the retail sector with a Relative Strength Rating of 58. Its weak report came one day after **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) reported strong results.  
+Target was already a laggard in the retail sector with a Relative Strength Rating of 58. Its weak report came one day after **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) reported strong results.  
+Target 在零售领域已经落后，相对强弱评级为 58。其疲软的报告是在**沃尔玛** （[WMT](https://research.investors.com/quote.aspx?symbol=WMT)） 报告强劲业绩的前一天发布的。
 
 
-Stock Market Today
-------------------
+Stock Market Today 今日股市
+-----------------------
 
 
 The Nasdaq and S&P 500 are both testing their 21-day lines, along with the Dow Jones Industrial Average and Russell 2000. The Dow Jones index added 0.3%, snapping a four-session slide. After reversing higher above its 21-day line Tuesday, the Russell 2000 edged higher by a fraction.  
