--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-20.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-20.md
@@ -12,16 +12,13 @@ author: REINHARDT KRAUSE
 
 
 
-**HubSpot** ([HUBS](https://research.investors.com/quote.aspx?symbol=HUBS)) is the [IBD Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the marketing software maker continues to make acquisitions to add artificial intelligence, sales automation and customer data management capabilities to its platform. HubSpot stock has climbed 19% in 2024.  
-**HubSpot** （[HUBS](https://research.investors.com/quote.aspx?symbol=HUBS)） 是[当今的 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为这家营销软件制造商继续进行收购，以在其平台中添加人工智能、销售自动化和客户数据管理功能。HubSpot 股票在 19 年上涨了 2024%。
+**HubSpot** ([HUBS](https://research.investors.com/quote.aspx?symbol=HUBS)) is the [IBD Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the marketing software maker continues to make acquisitions to add artificial intelligence, sales automation and customer data management capabilities to its platform. HubSpot stock has climbed 19% in 2024.  
 
 
-On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/?), HubSpot stock climbed 1.8% to close at 694.48.  
-[在今天的股市](https://www.investors.com/news/stock-market-today-stock-market-news/?)上，HubSpot 股票上涨 1.8%，收于 694.48。
+On the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/?), HubSpot stock climbed 1.8% to close at 694.48.  
 
 
-Cambridge, Mass.-based HubSpot sells sales and marketing software to small and midsize businesses. It focuses on digital channels such as blogs, internet search engines and social media.  
-总部位于马萨诸塞州剑桥市的 HubSpot 向中小型企业销售销售和营销软件。它专注于博客、互联网搜索引擎和社交媒体等数字渠道。
+Cambridge, Mass.-based HubSpot sells sales and marketing software to small and midsize businesses. It focuses on digital channels such as blogs, internet search engines and social media.  
 
 
 
@@ -87,7 +84,7 @@ Also, Boston-based HubSpot acquired business-to-business data provider Clearbit 
 
 
 He added: "And we want to do that in a way where we do not disrupt the great customer experience that we offer. And so we've gotten very comfortable with executing this type of an M&A playbook. We look for great talent that can accelerate innovation in very specific parts of our platform."  
-他补充说：“我们希望以一种不会破坏我们提供的良好客户体验的方式做到这一点。因此，我们已经非常熟悉执行这种类型的并购手册。我们寻找能够加速我们平台非常特定部分创新的优秀人才。
+他补充说：“我们希望以一种不会破坏我们提供的良好客户体验的方式做到这一点。因此，我们已经非常熟悉执行这种类型的并购手册。我们寻找能够加速我们平台特定部分创新的优秀人才。
 
 
 On an adjusted basis, HubSpot's September quarter earnings came in at $2.18 per share, up 37% from a year earlier. Revenue climbed 20% to $670 million. Analysts expected HubSpot earnings of $1.91 on sales of $647 million.  
