--- a/_columns/The_Big_Picture/zh-cn/2024-11-20.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-20.md
@@ -16,8 +16,7 @@ It wasn't looking good in the early going Wednesday as sellers initially knocked
 
 
 
-Meanwhile, a weak earnings report from **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)) weighed on the S&P 500. But the index closed fractionally higher after falling nearly 1% intraday. Target slumped more than 20% after the retailer [missed on earnings and revenue](https://www.investors.com/news/target-earnings-walmart-tjx-q3-target-stock-tjx-stock/) and also gave a weak outlook.  
-与此同时，**Target** （[TGT](https://research.investors.com/quote.aspx?symbol=TGT)） 疲软的收益报告令标准普尔 500 指数承压。但该指数在盘中下跌近 1% 后收盘小幅走高。Target 在[未达到收益和收入](https://www.investors.com/news/target-earnings-walmart-tjx-q3-target-stock-tjx-stock/)预期并且前景疲软后下跌超过 20%。
+Meanwhile, a weak earnings report from **Target** ([TGT](https://research.investors.com/quote.aspx?symbol=TGT)) weighed on the S&P 500. But the index closed fractionally higher after falling nearly 1% intraday. Target slumped more than 20% after the retailer [missed on earnings and revenue](https://www.investors.com/news/target-earnings-walmart-tjx-q3-target-stock-tjx-stock/) and also gave a weak outlook.  
 
 
 Target was already a laggard in the retail sector with a Relative Strength Rating of 58. Its weak report came one day after **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)) reported strong results.  
@@ -44,8 +43,8 @@ While the Nasdaq and S&P 500 remain on uptrends, there are yellow flags to consi
 虽然纳斯达克和标准普尔 500 指数仍处于上升趋势中，但仍有黄旗需要考虑。首先，纳斯达克的新高数量已经开始趋于平缓，而新低的数量则增加。这是在最近几天广度减弱之际发生的。
 
 
-An Extreme Reading On Bulls
----------------------------
+An Extreme Reading On Bulls关于多头的极端解读
+------------------------------------
 
 
 Meanwhile, the latest weekly survey of stock market newsletter writers by Investors Intelligence showed bulls at 60% for the second straight week.  
@@ -74,7 +73,8 @@ All that said, a large number of leading growth stocks continue to show strength
 综上所述，大量领先的成长股在价格大幅上涨后继续表现出实力和支持。虽然关注黄旗很重要，但关注积极因素也很重要。
 
 
-After the close, [Leaderboard](https://leaderboard.investors.com) stock **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) held up well after the [AI bellwether](https://www.investors.com/news/technology/nvidia-stock-nvda-fiscal-q3-2025-earnings/) reported another quarter of strong growth. Shares initially fell 4%, but Nvidia fought back and was down less than 1% around 2 p.m. ET.  
+After the close, [Leaderboard](https://leaderboard.investors.com) stock **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) held up well after the [AI bellwether](https://www.investors.com/news/technology/nvidia-stock-nvda-fiscal-q3-2025-earnings/) reported another quarter of strong growth. Shares initially fell 4%, but Nvidia fought back and was down less than 1% around 2 p.m. ET.  
+收盘后，[排行榜](https://leaderboard.investors.com)股票**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 在 [AI 领头羊](https://www.investors.com/news/technology/nvidia-stock-nvda-fiscal-q3-2025-earnings/)报告了另一个季度的强劲增长后保持良好状态。股价最初下跌 4%，但 Nvidia 进行了反击，在美国东部时间下午 2 点左右下跌了不到 1%。
 
 
 Movers And Shakers 推动者和摇动者
