--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-21.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-21.md
@@ -49,7 +49,7 @@ On Cloudflare's Q3 conference call with analysts, Chief Executive Matthew Prince
 
 
 Cryptocurrency prices have jumped since Donald Trump triumphed in the 2024 Presidential election. [Bitcoin rose again](http://nvestors.com/news/bitcoin-price-98000-record-trump-crypto-cabinet-bitcoin-options/) on Thursday, extending its postelection rally. Bitcoin notched a record high above $98,000.  
-自唐纳德·特朗普在 2024 年总统大选中获胜以来，加密货币价格一直在上涨。[比特币周四再次上涨](http://nvestors.com/news/bitcoin-price-98000-record-trump-crypto-cabinet-bitcoin-options/)，延续了其选后的涨势。比特币创下 98,000 美元以上的历史新高。
+自唐纳德·特朗普在 2024 年总统大选中获胜以来，加密货币价格上涨。[比特币周四再次上涨](http://nvestors.com/news/bitcoin-price-98000-record-trump-crypto-cabinet-bitcoin-options/)，延续了其选后的涨势。比特币创下 98,000 美元以上的历史新高。
 
 
 [Generative artificial intelligence](https://www.investors.com/news/technology/chatgpt-is-just-the-tip-of-the-iceberg-in-content-creating-artificial-intelligence-get-ready-for-a-lot-of-disruption/) has been a hot topic for investors since the emergence of ChatGPT maker OpenAI in late 2022. Further, Cloudflare has ties to OpenAI. Cloudflare provides secure links to cloud services when consumers sign up to use ChatGPT, a conversational chatbot.  
