--- a/_columns/The_Big_Picture/2024-11-22.md
+++ b/_columns/The_Big_Picture/2024-11-22.md
@@ -37,7 +37,7 @@ PCE Inflation Data, Fed Minutes Due
 -----------------------------------
 
 
-While many people will be most concerned with obtaining a suitably large Thanksgiving turkey, investors will have to mull over a small feast of economic data.
+![](https://www.investors.com/wp-content/uploads/2024/11/MP112224-272x300.jpg)While many people will be most concerned with obtaining a suitably large Thanksgiving turkey, investors will have to mull over a small feast of economic data.
 
 
 Consumer confidence and new home sales both drop on Tuesday. The Fed minutes from October come that same day, and could offer further clues on the future path of interest rate policy.
