--- a/_columns/The_Big_Picture/zh-cn/2024-11-22.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-22.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Drives Higher Ahead Of Thanksgiving; Inflation Data, Fed Minutes Due
+  Stock Market Drives Higher Ahead Of Thanksgiving; Inflation Data, Fed Minutes Due	感恩节前股市走高;通胀数据，美联储会议纪要到期
 date: 2024-11-22 17:29 -0800
 author: MICHAEL LARKIN
 ---
@@ -10,81 +10,102 @@ author: MICHAEL LARKIN
 
 
 
-The stock market ended higher in the final week before Thanksgiving. Now more inflation data and the latest Federal Reserve minutes are due.
+The stock market ended higher in the final week before Thanksgiving. Now more inflation data and the latest Federal Reserve minutes are due.  
+股市在感恩节前的最后一周收高。现在，更多的通胀数据和最新的美联储会议纪要即将公布。
 
 
-The Nasdaq composite flirted with negative territory before rallying to end Friday up 0.2%. This allowed the tech-heavy index to post a weekly gain of 1.7% and put it back above its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). The Nasdaq has climbed in two of the past three weeks and has increased 26.6% so far for 2024.
-
-
-
-
-The S&P 500 fared a bit better, rising 0.4% for the session. It also managed a weekly lift of 1.7% and sits clear of its short-term moving averages and is nearly 3% above the 50-day line. The benchmark index is now up 25.1% for the year.
-
-
-Advancers led decliners by 3-to-1 on the New York Stock Exchange and by just over 2-to-1 on the Nasdaq. Volume was lower on both exchanges.
-
-
-Speaking to the breadth, the equal-weighted Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund and the Nasdaq 100 Equal Weighted ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) both rose 0.8%. Each outperformed their market cap-weighted counterparts by a fair margin.
-
-
-The Dow Jones Industrial Average fared best out of the major indexes, closing at record heights after rising 1% Friday. **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) and **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)) fared best while artificial intelligence stock **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) lagged as investors continued to digest its earnings report.
-
-
-Small caps outperformed, with the Russell 2000 popping 1.8% Friday. It's just off recent highs and is now up nearly 10% for the month. The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) turned in a gain of 0.7% for the session.
-
-
-PCE Inflation Data, Fed Minutes Due
------------------------------------
-
-
-While many people will be most concerned with obtaining a suitably large Thanksgiving turkey, investors will have to mull over a small feast of economic data.
-
-
-Consumer confidence and new home sales both drop on Tuesday. The Fed minutes from October come that same day, and could offer further clues on the future path of interest rate policy.
-
-
-Wednesday will see the release of the latest Personal Consumption Expenditures price index data for October. This is important as it is the Fed's preferred measure of inflation. Headline PCE is seen rising 2.3% year over year. Core PCE, which strips out volatile energy and food prices, is expected to post an annualized rise of 2.8%, up slightly from 2.7% in September.
-
-
-There will also be some noteworthy [earnings reports to look out for](https://www.investors.com/category/research/earnings-preview/) despite the shortened week, with the markets closing on Thursday and having a shortened day Friday. **Dell** ([DELL](https://research.investors.com/quote.aspx?symbol=DELL)) in particular is one to watch out for due to its growing status as an artificial intelligence play, with server rival **Super Micro Computer** ([SMCI](https://research.investors.com/quote.aspx?symbol=SMCI)) embroiled in controversy. **Best Buy** ([BBY](https://research.investors.com/quote.aspx?symbol=BBY)) and **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) are among a slew of retailers reporting.
-
-
-Techs Lag But These Stock Market Groups Shine
----------------------------------------------
-
-
-The [S&P 500 sectors ended Friday mostly higher,](https://www.investors.com/category/etfs-and-funds/sectors/) with consumer discretionary and staples faring the best. Technology, communication services and utilities all finished lower.
+The Nasdaq composite flirted with negative territory before rallying to end Friday up 0.2%. This allowed the tech-heavy index to post a weekly gain of 1.7% and put it back above its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). The Nasdaq has climbed in two of the past three weeks and has increased 26.6% so far for 2024.  
+纳斯达克综合指数在下跌区域徘徊，周五反弹收盘上涨 0.2%。这使得这个以科技股为主的指数每周上涨 1.7%，并使其回到其 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)上方。纳斯达克指数在过去三周中的两周上涨，2024 年迄今上涨了 26.6%。
 
 
 
-The relative performance of Investor's Business Daily's 197 industry groups offered a more granular insight into what happened [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).
+
+The S&P 500 fared a bit better, rising 0.4% for the session. It also managed a weekly lift of 1.7% and sits clear of its short-term moving averages and is nearly 3% above the 50-day line. The benchmark index is now up 25.1% for the year.  
+标准普尔 500 指数表现稍好，盘中上涨 0.4%。它还实现了 1.7% 的周涨幅，避开了短期移动平均线，比 50 天线高出近 3%。基准指数今年上涨了 25.1%。
 
 
-Oil-and-gas realty trusts, database software firms, funeral services stocks and automakers were the best performers.
+Advancers led decliners by 3-to-1 on the New York Stock Exchange and by just over 2-to-1 on the Nasdaq. Volume was lower on both exchanges.  
+纽约证券交易所的涨幅为 3 比 1，纳斯达克的涨幅略高于 2 比 1。两家交易所的成交量均有所下降。
 
 
-In contrast, hospital plays, coal firms, travel bookers and managed care firms were among the laggards. The internet content group also fell, weighed down by Google-parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)). Google stock ended the week down 4.5% amid a Justice Department push to have [the search giant sell its Chrome browser](https://www.investors.com/news/technology/google-stock-justice-department-chrome-sale-apple-search-payments/).
+Speaking to the breadth, the equal-weighted Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund and the Nasdaq 100 Equal Weighted ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) both rose 0.8%. Each outperformed their market cap-weighted counterparts by a fair margin.  
+就广度而言，等权重 Invesco S&P 500 等权重 （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 交易所交易基金和纳斯达克 100 等权重 ETF （[QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)） 均上涨 0.8%。每家公司的表现都以相当大的幅度优于市值加权的同行。
 
 
-[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_112224.pdf)
+The Dow Jones Industrial Average fared best out of the major indexes, closing at record heights after rising 1% Friday. **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) and **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)) fared best while artificial intelligence stock **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) lagged as investors continued to digest its earnings report.  
+道琼斯工业平均指数在主要指数中表现最好，周五上涨 1% 后收于创纪录高位。**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 和**耐克** （[NKE](https://research.investors.com/quote.aspx?symbol=NKE)） 表现最好，而人工智能股票**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 表现落后，因为投资者继续消化其收益报告。
 
 
-*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
+Small caps outperformed, with the Russell 2000 popping 1.8% Friday. It's just off recent highs and is now up nearly 10% for the month. The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) turned in a gain of 0.7% for the session.  
+小盘股跑赢大盘，罗素 2000 指数周五上涨 1.8%。它刚刚从最近的高点回落，现在本月上涨了近 10%。Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 在该交易日上涨了 0.7%。
 
 
-**YOU MAY ALSO LIKE:**
+PCE Inflation Data, Fed Minutes DuePCE 通胀数据，美联储会议纪要到期
+-----------------------------------------------------
 
 
-[This AI Chip Stock Breaks Out To Record Highs](https://www.investors.com/stock-lists/ipo-analysis/ai-stock-astera-labs-alab/)
+![](https://www.investors.com/wp-content/uploads/2024/11/MP112224-272x300.jpg)While many people will be most concerned with obtaining a suitably large Thanksgiving turkey, investors will have to mull over a small feast of economic data.  
+虽然许多人最关心的是获得一只合适的大感恩节火鸡，但投资者将不得不考虑一场小型的经济数据盛宴。
 
 
-[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
+Consumer confidence and new home sales both drop on Tuesday. The Fed minutes from October come that same day, and could offer further clues on the future path of interest rate policy.  
+周二消费者信心和新屋销售均有所下降。美联储 10 月会议纪要在同一天发布，可能会为未来的利率政策路径提供更多线索。
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+Wednesday will see the release of the latest Personal Consumption Expenditures price index data for October. This is important as it is the Fed's preferred measure of inflation. Headline PCE is seen rising 2.3% year over year. Core PCE, which strips out volatile energy and food prices, is expected to post an annualized rise of 2.8%, up slightly from 2.7% in September.  
+周三将发布 10 月份最新的个人消费支出价格指数数据。这很重要，因为它是美联储首选的通胀衡量标准。整体 PCE 预计同比增长 2.3%。剔除波动较大的能源和食品价格的核心 PCE 预计将录得 2.8% 的年化增长，略高于 9 月份的 2.7%。
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+There will also be some noteworthy [earnings reports to look out for](https://www.investors.com/category/research/earnings-preview/) despite the shortened week, with the markets closing on Thursday and having a shortened day Friday. **Dell** ([DELL](https://research.investors.com/quote.aspx?symbol=DELL)) in particular is one to watch out for due to its growing status as an artificial intelligence play, with server rival **Super Micro Computer** ([SMCI](https://research.investors.com/quote.aspx?symbol=SMCI)) embroiled in controversy. **Best Buy** ([BBY](https://research.investors.com/quote.aspx?symbol=BBY)) and **Macy's** ([M](https://research.investors.com/quote.aspx?symbol=M)) are among a slew of retailers reporting.  
+尽管一周缩短了，但还将有一些值得[注意的收益报告值得关注](https://www.investors.com/category/research/earnings-preview/)，市场周四休市，周五的一天缩短。**尤其是戴尔** （[DELL）](https://research.investors.com/quote.aspx?symbol=DELL) 值得关注，因为它作为人工智能公司的地位越来越高，服务器竞争对手 **Super Micro Computer** （[SMCI）](https://research.investors.com/quote.aspx?symbol=SMCI) 卷入了争议。**百思买** （[BBY](https://research.investors.com/quote.aspx?symbol=BBY)） 和**梅西百货** （[M](https://research.investors.com/quote.aspx?symbol=M)） 是众多零售商报告之一。
+
+
+Techs Lag But These Stock Market Groups Shine科技股落后，但这些股市组别大放异彩
+--------------------------------------------------------------
+
+
+The [S&P 500 sectors ended Friday mostly higher,](https://www.investors.com/category/etfs-and-funds/sectors/) with consumer discretionary and staples faring the best. Technology, communication services and utilities all finished lower.  
+[标准普尔 500 指数板块周五收盘大多走高，](https://www.investors.com/category/etfs-and-funds/sectors/)其中非必需消费品和必需品表现最好。科技、通信服务和公用事业均收低。
+
+
+
+The relative performance of Investor's Business Daily's 197 industry groups offered a more granular insight into what happened [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).  
+Investor's Business Daily 的 197 个行业团体的相对表现为当今[股市](https://www.investors.com/news/stock-market-today-stock-market-news/)发生的事情提供了更细致的见解。
+
+
+Oil-and-gas realty trusts, database software firms, funeral services stocks and automakers were the best performers.  
+石油和天然气房地产信托、数据库软件公司、殡葬服务股票和汽车制造商表现最佳。
+
+
+In contrast, hospital plays, coal firms, travel bookers and managed care firms were among the laggards. The internet content group also fell, weighed down by Google-parent **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)). Google stock ended the week down 4.5% amid a Justice Department push to have [the search giant sell its Chrome browser](https://www.investors.com/news/technology/google-stock-justice-department-chrome-sale-apple-search-payments/).  
+相比之下，医院公司、煤炭公司、旅游预订公司和管理式医疗公司则落后。互联网内容集团也下跌，受到谷歌母公司 **Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)） 的拖累。谷歌股价本周收盘下跌 4.5%，原因是司法部推动[这家搜索巨头出售其 Chrome 浏览器](https://www.investors.com/news/technology/google-stock-justice-department-chrome-sale-apple-search-payments/)。
+
+
+[View General Market Indicators chart page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_112224.pdf)
+
+
+*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
+请关注 Michael Larkin 在 X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 上的更多分析。*
+
+
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
+
+
+[This AI Chip Stock Breaks Out To Record Highs  
+这只 AI Chip 股票突破历史新高](https://www.investors.com/stock-lists/ipo-analysis/ai-stock-astera-labs-alab/)
+
+
+[These Are The Five Best Stocks To Buy And Watch Now  
+这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
+
+
+[Join IBD Live Each Morning For Stock Tips Before The Open  
+每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+
+
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
+这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
