--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-22.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-22.md
@@ -60,7 +60,7 @@ IBD 将 DECK 股票添加到[排行榜](https://leaderboard.investors.com/#/lead
 
 
 ONON stock popped 3.4% on Friday to a new high. Shares rebounded from their 50-day line this week and ran back through a buy zone.  
-ONON 股价周五上涨 3.4% 至新高。本周，股价从 50 日线反弹，并回落至买入区域。
+ONON 股价周五上涨 3.4%，创下新高。本周，股价从 50 日线反弹，并回落至买入区域。
 
 
 Deckers Outdoor Earnings Deckers Outdoor 收益
@@ -68,11 +68,11 @@ Deckers Outdoor Earnings Deckers Outdoor 收益
 
 
 The [IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-deckers-outdoor-deck.aspx) tool shows that DECK stock is currently the No. 2 shoe and apparel manufacturer, behind only ONON stock, in terms of its [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1), which rolls various fundamental and technical metric into one easy-to-use score.  
-[IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-deckers-outdoor-deck.aspx) 工具显示，DECK stock 目前是排名第二的鞋类和服装制造商，仅次于 ONON stock，就[其综合评级](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1)而言，该评级将各种基本和技术指标汇总为一个易于使用的分数。
+[IBD Stock Checkup](https://research.investors.com/stock-checkup/nyse-deckers-outdoor-deck.aspx) 工具显示，DECK stock 目前是第二大鞋类和服装制造商，仅次于 ONON stock，就[其综合评级](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1)而言，该评级将各种基本面和技术指标汇总为一个易于使用的分数。
 
 
 In terms of key IBD ratings, Deckers Outdoor earns a Composite Rating of 91, RS Rating of 86 and EPS Rating of 99, all out of a best-possible 99.  
-在关键的 IBD 评级方面，Deckers Outdoor 的综合评级为 91，RS 评级为 86，EPS 评级为 99，均满分 99。
+在关键的 IBD 评级方面，Deckers Outdoor 的综合评级为 91，RS 评级为 86，EPS 评级为 99，均为 99 分。
 
 
 Earnings growth averaged 57% over the past three quarters, above the three-year rate of 33%. Further, Deckers boasts eight quarters of rising fund ownership.  
